# telegram-bot-proxy

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md
.sqlx/: query-019e13a50c25acf6086fcb93dcc1735492d552f475cbfe7f4a053fa82d6b76f3.json  query-279655492dae55fb6e180e6e4b037ec6e3efb175719581a47c39bbf1026743cc.json  query-645194c10097e6009625467c58279c0dd6589048aaaa31821694a6862605ab89.json  query-7f1f15097e528932821c98f0101836fe4b4538f9623c33fafcd7061162ffc9f9.json  query-8882d0a2f411c5b153c41c7f26f4ab7a5e243a70507e00543d1e71dd9f90f82c.json
migrations/: 20240101000000_init.sql  20251010131134_init.sql
src/: api.rs  bot.rs  db.rs  main.rs
